# voice-recognition

./: Cargo.toml
src/: main.rs
src/error/: error.rs
src/whisper/: mod.rs  whisper.rs
